# Wonterfact

./: README.md  pyproject.toml
jupyter/: skellam-snmf-experiments.ipynb
tests/: test_utils.py  utils.py
wonterfact/: __init__.py  core_nodes.py  graphviz.py  leaves.py  operators.py  root.py  utils.py
wonterfact/examples/: conv_nmf.py  nmf.py  snmf.py
