[tool.poetry]
name = "wonterfact"
version = "3.0.0"
description = "A powerful tool to design any tensor factorization model and estimate the corresponding parameters"
authors = ["Smart-Impulse <contact@smart-impulse.com>", "Benoit Fuentes <bf@benoit-fuentes.fr>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/smartimpulse/wonterfact"
keywords = ["tensor", "factorization", "IA", "signal", "bayes"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^2.0.0"
numba = "^0.60.0"
scipy = "^1.14.0"
opt_einsum = "^3.3.0"
custom_inherit = "^2.4.1"
python-baseconv = "^1.2.2"
graphviz = "^0.20.3"
methodtools = "^0.4.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.5"
black = {version = "^24.4.2", allow-prereleases = true}
rope = "^1.13.0"
line_profiler = "^4.1.3"
mypy = "^1.10.1"

[tool.pytest.ini_options]
markers = [
    "gpu: marks tests as running on gpu (deselect with '-m \"not gpu\"')"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
